--- a/src/content/fair-years/2025.yml
+++ b/src/content/fair-years/2025.yml
@@ -25,7 +25,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARARASI  TEKNE VE SU SPORLARI FUARI
-      sector: Kalıp & Plastik, İhtisas, Havuz
+      sector: Tekne, Havuz ve Yan Sanayi
+      hide_dates: false
       location_tr: DUSSELDORF, ALMANYA
       start_date: 2025-01-18
       description_en: INTERNATIONAL BOAT AND WATER SPORTS FAIR
@@ -33,7 +34,6 @@ fairs:
       name_tr: BOOT DUSSELDORF
       location_en: DUSSELDORF, GERMANY
       name_en: BOOT DUSSELDORF
-      hide_dates: false
     visuals:
       logo: /images/logo-boot.png
       background_image: /images/gorsel-boot.avif
@@ -48,6 +48,7 @@ fairs:
     basic_info:
       description_tr: ULUSLARARASI EV TEKSTİLİ VE DEKORASYON FUARI
       sector: Ev Tekstili ve Dekorasyon
+      hide_dates: false
       location_tr: ALMATI, KAZAKİSTAN
       start_date: 2025-02-24
       description_en: INTERNATIONAL HOME TEXTILES AND DECORATION FAIR
@@ -55,7 +56,6 @@ fairs:
       name_tr: 17.HOMEDECO KAZAKİSTAN
       location_en: ALMATY, KAZAKHSTAN
       name_en: 17TH HOMEDECO KAZAKHSTAN
-      hide_dates: false
     visuals:
       logo: /images/fuarlar-logo.png
       background_image: /images/gorsel.jpg
@@ -69,7 +69,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: GELİNLİK, ABİYE, DAMATLIK VE GELİNLİK KUMAŞI FUARI
-      sector: Moda ve Tekstil
+      sector: Moda
+      hide_dates: false
       location_tr: MOSKOVA, RUSYA
       start_date: 2025-02-27
       description_en: INTERNATIONAL TRADE SHOW BRIDALWEAR, EVENINGWEAR, ACCESSORIES
@@ -77,7 +78,6 @@ fairs:
       name_tr: 43.WEDDING FASHION MOSCOW
       location_en: MOSCOW, RUSSIA
       name_en: 43TH WEDDING FASHION MOSCOW
-      hide_dates: false
     visuals:
       logo: /images/logo.png
       background_image: /images/image_1_48.webp
@@ -91,7 +91,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARARASI GELİNLİK FUARI
-      sector: Moda ve Tekstil
+      sector: Moda
+      hide_dates: false
       location_tr: PARİS, FRANSA
       start_date: 2025-03-09
       description_en: INTERNATIONAL BRIDAL SHOW
@@ -99,7 +100,6 @@ fairs:
       name_tr: PARIS BRIDAL FAIR
       location_en: PARIS, FRANCE
       name_en: PARIS BRIDAL FAIR
-      hide_dates: false
     visuals:
       logo: /images/logo-parisbridal.jpg
       background_image: /images/2019-gelinlik-trendleri-neler-1.jpg
@@ -113,7 +113,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARARASI ELEKTRİK, ENERJİ AYDINLATMA VE BİNA OTOMASYON FUARI
-      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      sector: Elektrik, Enerji ve Aydınlatma
+      hide_dates: false
       location_tr: MOSKOVA, RUSYA
       start_date: 2025-04-01
       description_en: INTERNATIONAL EXHIBITION FOR ELECTRICAL EQUIPMENT FOR POWER AND
@@ -122,7 +123,6 @@ fairs:
       name_tr: ELECTRO
       location_en: MOSCOW, RUSSIA
       name_en: ELECTRO
-      hide_dates: false
     visuals:
       logo: /images/fair-logo-electro.png
       background_image: /images/gorsel.jpg
@@ -136,7 +136,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARARASI ELEKTRİK, ENERJİ VE AYDINLATMA FUARI
-      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      sector: Elektrik, Enerji ve Aydınlatma
+      hide_dates: false
       location_tr: DUBAI, BAE
       start_date: 2025-04-07
       description_en: INTERNATIONAL SECTORAL TRADE EXHIBITION OF ENERGY INDUSTRY AND
@@ -145,7 +146,6 @@ fairs:
       name_tr: MIDDLE EAST ENERGY
       location_en: DUBAI, UAE
       name_en: MIDDLE EAST ENERGY
-      hide_dates: false
     visuals:
       logo: /images/fair-logo-mee.jpg
       background_image: /images/fair-bg-mee.png
@@ -159,7 +159,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARASI KIŞ MODA FUARI
-      sector: Deri Fuarları & Güvenlik Sistemleri Fuarları
+      sector: Moda
+      hide_dates: false
       location_tr: MOSKOVA, RUSYA
       start_date: 2025-04-28
       description_en: INTERNATIONAL WINTER FASHION TRADE SHOW
@@ -167,7 +168,6 @@ fairs:
       name_tr: 28.LESHOW MOSKOVA
       location_en: MOSCOW, RUSSIA
       name_en: 28TH LESHOW MOSCOW
-      hide_dates: false
     visuals:
       logo: /images/leshow-logo-fair.png
       background_image: /images/0161.jpg
@@ -182,6 +182,7 @@ fairs:
     basic_info:
       description_tr: ULUSLARARASI TİCARET FUARI
       sector: Diğer
+      hide_dates: false
       location_tr: KAZAN, TATARİSTAN
       start_date: 2025-05-14
       description_en: INTERNATIONAL ECONOMIC FORUM "RUSSIA - ISLAMIC WORLD KAZAN FORUM
@@ -189,7 +190,6 @@ fairs:
       name_tr: KAZAN FORUM & RUSYA HELAL EXPO
       location_en: KAZAN, TATARSTAN
       name_en: KAZAN FORUM & RUSYA HELAL EXPO
-      hide_dates: false
     visuals:
       logo: /images/fair-logo-kazan.jpg
       background_image: /images/fair-bg-kazan.png
@@ -203,7 +203,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARARASI KALIP VE PLASTİK FUARI
-      sector: Kalıp & Plastik, İhtisas, Havuz
+      sector: Tel, Boru, Kalıp ve Plastik
+      hide_dates: false
       location_tr: MOSKOVA, RUSYA
       start_date: 2025-06-17
       description_en: ROSMOULD INTERNATIONAL MOLD FAIR / ROSPLAST INTERNATIONAL PLASTIC FAIR
@@ -211,7 +212,6 @@ fairs:
       name_tr: ROSMOULD / ROSPLAST
       location_en: MOSCOW, RUSSIA
       name_en: ROSMOULD / ROSPLAST
-      hide_dates: false
     visuals:
       logo: /images/fair-logo-rosmould.png
       background_image: /images/download.jpg
@@ -225,7 +225,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARARASI BEBEK GİYİM VE ARAÇ GEREÇLERİ FUARI
-      sector: Moda ve Tekstil
+      sector: Moda
+      hide_dates: false
       location_tr: KÖLN, ALMANYA
       start_date: 2025-09-09
       description_en: INTERNATIONAL TRADE FAIR FOR BABY AND TODDLER OUTFITTING
@@ -233,7 +234,6 @@ fairs:
       name_tr: KIND+JUGEND
       location_en: COLOGNE, GERMANY
       name_en: KIND+JUGEND
-      hide_dates: false
     visuals:
       logo: /images/kind-logo-fair.png
       background_image: /images/ekran-resmi-2025-09-03-22.48.44.png
@@ -247,7 +247,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARARASI GELİNLİK FUARI
-      sector: Moda ve Tekstil
+      sector: Moda
+      hide_dates: false
       location_tr: HARROGATE, İNGİLTERE
       start_date: 2025-09-14
       description_en: INTERNATIONAL BRIDAL FAIR
@@ -255,7 +256,6 @@ fairs:
       name_tr: HARROGATE BRIDAL – WHITE GALLERY
       location_en: HARROGATE, ENGLAND
       name_en: HARROGATE BRIDAL – WHITE GALLERY
-      hide_dates: false
     visuals:
       logo: /images/logo-bridal.png
       background_image: /images/2019-gelinlik-trendleri-neler-1.jpg
@@ -269,7 +269,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: BEBEK & ÇOCUK GİYİM VE ARAÇ GEREÇLERİ FUARI
-      sector: Moda ve Tekstil
+      sector: Moda
+      hide_dates: false
       location_tr: RİYAD, SUUDİ ARABİSTAN
       start_date: 2025-09-16
       description_en: BABY & CHILDREN'S CLOTHING AND EQUIPMENT FAIR
@@ -277,7 +278,6 @@ fairs:
       name_tr: KIDS & TOYS
       location_en: RIYADH, SAUDI ARABIA
       name_en: KIDS & TOYS
-      hide_dates: false
     visuals:
       logo: /images/logo-kidstoys.png
       background_image: /images/gorsel-kidstoys.jpg
@@ -292,7 +292,8 @@ fairs:
     basic_info:
       description_tr: ULUSLARARASI AYDINLATMA, ELEKTRİK MÜHENDİSLİĞİ VE GÜVENLİK
         SİSTEMLERİ FUARI
-      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      sector: Elektrik, Enerji ve Aydınlatma
+      hide_dates: false
       location_tr: ASTANA, KAZAKİSTAN
       start_date: 2025-09-17
       description_en: INTERNATIONAL LIGHTING, ELECTRICAL ENGINEERING AND SECURITY SYSTEMS FAIR
@@ -300,7 +301,6 @@ fairs:
       name_tr: INTERLIGHT CENTRAL ASIA
       location_en: ASTANA, KAZAKHSTAN
       name_en: INTERLIGHT CENTRAL ASIA
-      hide_dates: false
     visuals:
       logo: /images/logo-interlight.png
       background_image: /images/gorsel-interlight.jpg
@@ -314,7 +314,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARARASI MODA FUARI
-      sector: Moda ve Tekstil
+      sector: Moda
+      hide_dates: false
       location_tr: RİYAD, SUUDİ ARABİSTAN
       start_date: 2025-10-06
       description_en: INTERNATIONAL FASHION FAIR
@@ -322,7 +323,6 @@ fairs:
       name_tr: SAUDI LIFESTYLE WEEK
       location_en: RIYADH, SAUDI ARABIA
       name_en: SAUDI LIFESTYLE WEEK
-      hide_dates: false
     visuals:
       logo: /images/logo-saudi.jpg
       background_image: /images/gorsel-saudi.jpg
@@ -338,6 +338,7 @@ fairs:
       description_tr: ULUSLARARASI İÇ MEKAN KUMAŞLARI, EV TEKSTİLİ VE DEKORASYON
         MALZEMELERİ FUARI
       sector: Ev Tekstili ve Dekorasyon
+      hide_dates: false
       location_tr: MOSKOVA, RUSYA
       start_date: 2025-10-21
       description_en: INTERNATIONAL TRADE FAIR OF INTERIOR FABRICS, HOME TEXTILES AND
@@ -346,7 +347,6 @@ fairs:
       name_tr: HOMETEXTILE & DESIGN
       location_en: MOSCOW, RUSSIA
       name_en: HOMETEXTILE & DESIGN
-      hide_dates: false
     visuals:
       logo: /images/logo-hometextile.png
       background_image: /images/gorsel-hometextile.jpg
@@ -360,7 +360,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARARASI AYDINLATMA VE AKILLI BİNA TEKNOLOJİLERİ FUARI
-      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      sector: Elektrik, Enerji ve Aydınlatma
+      hide_dates: false
       location_tr: MOSKOVA, RUSYA
       start_date: 2025-10-21
       description_en: INTERNATIONAL TRADE FAIR FOR LIGHTING AND BUILDING SERVICES TECHNOLOGY
@@ -368,7 +369,6 @@ fairs:
       name_tr: INTERLIGHT SMART CITY & HOME
       location_en: MOSCOW, RUSSIA
       name_en: INTERLIGHT SMART CITY & HOME
-      hide_dates: false
     visuals:
       logo: /images/logo-ınterlıght.png
       background_image: /images/gorsel-interlightsmart.jpg
@@ -382,7 +382,8 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARARASI HAVUZ, SAĞLIK VE AÇIK HAVA FUARI
-      sector: Kalıp & Plastik, İhtisas, Havuz
+      sector: Tekne, Havuz ve Yan Sanayi
+      hide_dates: false
       location_tr: BARSELONA, İSPANYA
       start_date: 2025-11-17
       description_en: INTERNATIONAL POOL, HEALTH AND OUTDOOR FAIR
@@ -390,7 +391,6 @@ fairs:
       name_tr: PISCINA BARCELONA
       location_en: BARCELONA, SPAIN
       name_en: PISCINA BARCELONA
-      hide_dates: false
     visuals:
       logo: /images/logo-piscina.png
       background_image: /images/gorsel-piscina.jpg
@@ -404,15 +404,15 @@ fairs:
       show_in_chronology: false
     basic_info:
       description_tr: ULUSLARARASI MOBİLYA, BAĞLANTI ELEMANLARI VE YAN SANAYİ FUARI
-      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      sector: Mobilya ve Mobilya Yan Sanayi
+      hide_dates: false
       location_tr: MOSKOVA, RUSYA
       start_date: 2025-11-24
       description_en: INTERNATIONAL EXHIBITION FOR FURNITURE, FITTINGS AND UPHOLSTERY
       end_date: 2025-11-27
-      name_tr: "MEBEL "
+      name_tr: MEBEL
       location_en: MOSCOW, RUSSIA
       name_en: "MEBEL "
-      hide_dates: false
     visuals:
       logo: /images/logo-mebel.png
       background_image: /images/gorsel-mebel.png
@@ -427,7 +427,8 @@ fairs:
     basic_info:
       description_tr: ULUSLARARASI AĞAÇ İŞLEME VE MOBİLYA ENDÜSTRİSİ İÇİN EKİPMAN,
         MALZEME VE BİLEŞENLERİ FUARI
-      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      sector: Mobilya ve Mobilya Yan Sanayi
+      hide_dates: false
       location_tr: MOSKOVA, RUSYA
       start_date: 2025-12-02
       description_en: ANNUAL INTERNATIONAL EXHIBITION OF EQUIPMENT, MATERIALS AND
@@ -436,7 +437,6 @@ fairs:
       name_tr: WOODEX
       location_en: MOSCOW, RUSSIA
       name_en: WOODEX
-      hide_dates: false
     visuals:
       logo: /images/logo-woodex.png
       background_image: /images/gorsel-woodex.png
